--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 
 @layer base{
     section{
-        @aplly py-[75px]
+        @apply py-[75px]
     }
 }
 
@@ -25,7 +25,16 @@
     .text__para{
         @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px];
     }
+
+    .header{
+        @apply bg-gradient-to-r from-cyan-100 via-slate-50 to-yellow-50 ;  
+    }
+
+    .hero__section{
+        @apply bg-gradient-to-r from-cyan-100 via-slate-50 to-yellow-50 ;
+    }
 }
+
 
 @media only screen and (max-width:1024px) {
     .container{
